deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-app
  labels:
    app: quarkus-app
spec:
  replicas: 1 # Начальное количество реплик
  selector:
    matchLabels:
      app: quarkus-app
  template:
    metadata:
      labels:
        app: quarkus-app
    spec:
      containers:
        - name: quarkus-container
          image: localhost:5000/georgezhironkin/quarkus-native:v3 # Укажите имя вашего образа
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          env: # Передача переменных окружения
            - name: APP_API_LIMIT
              value: "60"
            - name: APP_API_TIMEOUT
              value: "700"
---
apiVersion: v1
kind: Service
metadata:
  name: quarkus-service
  labels:
    app: quarkus-app
    release: kube-stack-prometheus # Важно для поиска оператором
spec:
  type: ClusterIP # Сервис доступен только внутри кластера
  selector:
    app: quarkus-app # Находит поды с этой меткой
  ports:
    - name: http
      protocol: TCP
      port: 80       # Порт сервиса
      targetPort: 8080 # Порт внутри контейнера (как в EXPOSE Dockerfile)
