ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quarkus-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: work.local  # <-- Добавьте эту строку
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quarkus-service
                port:
                  number: 80
